--- a/myinit.org
+++ b/myinit.org
@@ -1,15 +1,20 @@
 * Interface Tweaks
 #+BEGIN_SRC emacs-lisp
-  ;; housekeeping
-    (setq inhibit-startup-message t)
-    (tool-bar-mode -1)
-  ;;(menu-bar-mode -1)
-    (setq frame-title-format "emacs")
-    (scroll-bar-mode -1)
-    (fset 'yes-or-no-p ' y-or-n-p)
-    (global-set-key (kbd "<f5>") 'revert-buffer)
-    (setq org-src-fontify-natively t)
-    (show-paren-mode)
+    ;; housekeeping
+      (setq inhibit-startup-message t)
+      (tool-bar-mode -1)
+    ;;(menu-bar-mode -1)
+      (setq frame-title-format "emacs")
+      (scroll-bar-mode -1)
+      (fset 'yes-or-no-p ' y-or-n-p)
+      ;;
+      (setq org-src-fontify-natively t)
+      (show-paren-mode)
+      (fset 'jdent
+          [return return ?\C-p tab])
+      (global-set-key (kbd "C-j") nil)
+      (global-set-key (kbd "C-j") 'jdent)
+  ;;    (put 'my-macro 'kmacro t)
 #+END_SRC
 * Try
 #+BEGIN_SRC emacs-lisp
@@ -168,6 +173,7 @@ That is, a string used to represent it on the tab bar."
     (use-package company
       :ensure t)
     (add-hook 'after-init-hook 'global-company-mode)
+    (require 'color)
   #+END_SRC
 * Themes
 #+BEGIN_SRC emacs-lisp
@@ -254,3 +260,4 @@ That is, a string used to represent it on the tab bar."
     (add-hook 'python-mode-hook 'anaconda-mode)
   #+END_SRC
   
+
